--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.0.0",
     "@graphql-codegen/typescript-urql": "^3.4.1",
     "@urql/exchange-graphcache": "^4.3.6",
+    "ansi-regex": "^5.0.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.0.3",
     "graphql": "^16.2.0",
